--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <header class="header">
         <div class="container">
             <nav class="navbar">
-                <div class="logo"></div>
                 <div class="hamburger" id="hamburger">
                     <i class="fas fa-bars"></i>
                 </div>
+                <div class="logo"></div>
                 <ul class="nav-links" id="nav-links">
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#skills">Technologies</a></li>
@@ -37,7 +37,7 @@
                 <a href="https://www.codechef.com/users/chetan_71" target="_blank"><i class="fas fa-code"></i></a>
             </div>
             <a href="Chetan_SDE.pdf" download class="btn">Download Resume</a>
-            <div class="scroll-down">
+            <div class="scroll-down" id="scroll-down">
                 <p>Scroll Down</p>
                 <i class="fas fa-arrow-down"></i>
             </div>
@@ -188,9 +188,12 @@
 
     </main>
 
+    
     <footer class="footer">
         <p>&copy; 2024 Chetan Chauhan. All Rights Reserved.</p>
-        <p><a href="contact.html" class="contact-link">Contact Me</a></p>
+        <section id="end-of-page">
+            <p>Feel free to <a href="contact.html" class="contact-link">Contact With Me</a></p>
+        </section>
     </footer>
 
 </body>
