--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +7,16 @@
     <link rel="stylesheet" href="contact-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-
 <body>
     <header class="contact-header">
-        <h1>Contact Me</h1>
-        <p>Feel free to reach out through the form below or using the provided contact details!</p>
+        <div class="container">
+            <h1>Contact Me</h1>
+            <p>Feel free to reach out through the form below or using the provided contact details!</p>
+        </div>
     </header>
 
     <section class="contact-section">
-        <div class="contact-container">
-            <!-- Contact Form -->
+        <div class="container contact-container">
             <div class="contact-form">
                 <h2>Send a Message</h2>
                 <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
@@ -38,12 +37,10 @@
                 </form>
             </div>
 
-            <!-- Contact Information -->
             <div class="contact-info">
                 <h2>Contact Information</h2>
                 <p><i class="fas fa-phone-alt"></i> +91-8708377165</p>
-                <p><i class="fas fa-envelope"></i> <a
-                        href="mailto:chetanchauhan1930@gmail.com">chetanchauhan1930@gmail.com</a></p>
+                <p><i class="fas fa-envelope"></i> <a href="mailto:chetanchauhan1930@gmail.com">chetanchauhan1930@gmail.com</a></p>
                 <p><i class="fas fa-map-marker-alt"></i> Sonipat, Haryana, India</p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/chetan71/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -55,10 +52,10 @@
     </section>
 
     <footer class="footer">
-        <p>&copy; 2024 Chetan Chauhan. All Rights Reserved.</p>
-        <p><a href="contact.html" class="contact-link">Contact Me</a></p>
+        <div class="container">
+            <p>&copy; 2024 Chetan Chauhan. All Rights Reserved.</p>
+            <p><a href="contact.html" class="contact-link">Contact Me</a></p>
+        </div>
     </footer>
-
 </body>
-
 </html>
