--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="#skills">Technologies</a></li>
                     <li><a href="#profiles">Profiles</a></li>
                     <li><a href="#projects">Projects</a></li>
+                    <li><a href="#Courses">Courses</a></li>
                     <li><a href="#certificates">Certificates</a></li>
                     <li><a href="#hobbies">Hobbies</a></li>
                     <li><a href="contact.html" target="_blank">Contact Me</a></li>
@@ -112,6 +113,30 @@
                 </div>
             </div>
         </section>
+
+        <section id="Courses" class="section projects">
+                <h2 >Course Subjects</h2>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <h3>Object-Oriented Programming</h3>
+                        <p>Learn the principles of OOP, including encapsulation, inheritance, polymorphism, and abstraction.</p>
+                    </div>
+                    <div class="project-card">
+                        <h3>Computer Networks</h3>
+                        <p>Understand network architecture, protocols, and data communication in real-world applications.</p>
+                    </div>
+                    <div class="project-card">
+                        <h3>Data Structures & Algorithms</h3>
+                        <p>Master data organization, optimization techniques, and efficient problem-solving strategies.</p>
+                    </div>
+                    <div class="project-card">
+                        <h3>Operating Systems</h3>
+                        <p>Explore the concepts of process management, memory management, and file systems.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
 
 
         <section id="profiles" class="section profiles">
